098_bst_map/grade.txt
Grading at 11/08/2022:23:43:34.315256
For commit ID cf19150c2b90f4f47fd208b4b8680a672f25cb7f
Grading at Tue Nov  8 06:43:32 PM EST 2022
-----------------------------------------------
testcase 1 : Testing with BstMap<int,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = int]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<int, int>::Node*’ to ‘BstMap<int, int>::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<int, int>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 2 : Testing with BstMap<int,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = std::__cxx11::basic_string<char>]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<int, std::__cxx11::basic_string<char> >::Node*’ to ‘BstMap<int, std::__cxx11::basic_string<char> >::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<int, std::__cxx11::basic_string<char> >::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 3 : Testing with BstMap<int,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = int; V = Tester]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<int, Tester>::Node*’ to ‘BstMap<int, Tester>::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<int, Tester>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 4 : Testing with BstMap<std::string,int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = int]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, int>::Node*’ to ‘BstMap<std::__cxx11::basic_string<char>, int>::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<std::__cxx11::basic_string<char>, int>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 5 : Testing with BstMap<std::string,std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = std::__cxx11::basic_string<char>]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node*’ to ‘BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<std::__cxx11::basic_string<char>, std::__cxx11::basic_string<char> >::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 6 : Testing with BstMap<std::string,(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = std::__cxx11::basic_string<char>; V = Tester]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node*’ to ‘BstMap<std::__cxx11::basic_string<char>, Tester>::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<std::__cxx11::basic_string<char>, Tester>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 7 : Testing with BstMap<(a custom class we wrote),int>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = int]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<Tester, int>::Node*’ to ‘BstMap<Tester, int>::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<Tester, int>::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 8 : Testing with BstMap<(a custom class we wrote),std::string>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = std::__cxx11::basic_string<char>]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node*’ to ‘BstMap<Tester, std::__cxx11::basic_string<char> >::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<Tester, std::__cxx11::basic_string<char> >::Node*
The code did not compile.  This test failed.
-----------------------------------------------
testcase 9 : Testing with BstMap<(a custom class we wrote),(a custom class we wrote)>
...compiling...
In file included from 89-tester.cpp:1:
bstmap.h: In instantiation of ‘void BstMap<K, V>::remove(const K&) [with K = Tester; V = Tester]’:
bstmap.h:86:16:   required from here
bstmap.h:106:35: error: cannot convert ‘BstMap<Tester, Tester>::Node*’ to ‘BstMap<Tester, Tester>::Node**’ in initialization
  106 |       Node ** predecessor = temp->left;
      |                             ~~~~~~^~~~
      |                                   |
      |                                   BstMap<Tester, Tester>::Node*
The code did not compile.  This test failed.

Overall Grade: F
